[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pawpaw"
dynamic = ["version"]
authors = [
  { name="Robert L. Ayers", email="rlayers@yahoo.com" },
]
description = "High Performance Text Processing & Segmentation Framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = { paths = ["LICENSE"] }
dependencies = [
  "regex >= 2022.7.9",
  #"python-dateutil==2.8.*",
  #"black @ https://github.com/psf/black/archive/refs/tags/21.10b0.zip",
  #"pytorch @ https://download.pytorch.org/whl/cu102/torch-1.10.0%2Bcu102-cp39-cp39-linux_x86_64.whl",
]
keywords = [
  "nlp",
  "information-extraction",
  "xml-parser",
  "text-processing",
  "text-segmentation",
  "hierarchical-text-segmentation",
]
classifiers = [
    # See https://pypi.org/classifiers/
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing"
]

[project.urls]
"Homepage" = "https://github.com/rlayers/pawpaw"
"Bug Tracker" = "https://github.com/rlayers/pawpaw/issues"

[tool.hatch.version]
path = "pawpaw/_version.py"
