[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pawpaw"
dynamic = ["version"]
authors = [
  { name="Robert L. Ayers", email="rlayers@yahoo.com" },
]
description = "High Performance Text Processing & Segmentation Framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = { paths = ["LICENSE"] }
dependencies = [
  "regex >= 2023.8.8",
]
keywords = [
  "nlp",
  "information-extraction",
  "text-processing",
  "text-segmentation",
  "hierarchical-text-segmentation",
  "python",
  "xml-parser",
  "extract-text",
  "knowledge-graph",
]
classifiers = [
    # See https://pypi.org/classifiers/
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing"
]

[project.urls]
"Homepage" = "https://github.com/rlayers/pawpaw"
"Bug Tracker" = "https://github.com/rlayers/pawpaw/issues"

[tool.hatch.version]
path = "pawpaw/_version.py"
